--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+#DS_Store
+DS_Store
+DS_STORE
+.DS_Store
+.DS_STORE
+
+
+
 # Runtime data
 pids
 *.pid
