--- a/hike-quest-app/package.json
+++ b/hike-quest-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.13.0",
     "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
